--- a/ShoppingList/AndroidManifest.xml
+++ b/ShoppingList/AndroidManifest.xml
@@ -26,6 +26,10 @@
             android:name=".ChooseItemActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name=".ReviewItemActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
